Updated file path for the .case file in the notebooks

--- a/reading_cs.ipynb
+++ b/reading_cs.ipynb
@@ -23,15 +23,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EnSightReader('postprocessing/RESULTS_FLUID_DOMAIN.case')\n",
-      "EnSightReader('postprocessing/RESULTS_FLUID_DOMAIN.case')\n"
+      "EnSightReader('case/postprocessing/RESULTS_FLUID_DOMAIN.case')\n",
+      "EnSightReader('case/postprocessing/RESULTS_FLUID_DOMAIN.case')\n"
      ]
     }
    ],
    "source": [
     "import pyvista as pv\n",
     "\n",
-    "fn = 'postprocessing/RESULTS_FLUID_DOMAIN.case'\n",
+    "fn = 'case/postprocessing/RESULTS_FLUID_DOMAIN.case'\n",
     "\n",
     "reader1 = pv.get_reader(fn)\n",
     "reader2 = pv.EnSightReader(fn)\n",
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MultiBlock (0x7dfec7483ca0)\n",
+      "MultiBlock (0x76cdfa9ffac0)\n",
       "  N Blocks    1\n",
       "  X Bounds    -1.000, 1.000\n",
       "  Y Bounds    -1.000, 1.000\n",
@@ -106,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UnstructuredGrid (0x7dfec7483e20)\n",
+      "UnstructuredGrid (0x76cdfa9ffc40)\n",
       "  N Cells:    3140920\n",
       "  N Points:   3172091\n",
       "  X Bounds:   -1.000e+00, 1.000e+00\n",
@@ -202,12 +202,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2128b95f1a3b4cbfbde322413c52e5bf",
+       "model_id": "07df07cd48e84c668f1ee8ba557a0b90",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:43125/index.html?ui=P_0x7dfec74a1ed0_0&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:42493/index.html?ui=P_0x76cdfac42a10_0&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -240,12 +240,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dc7b012f0de42bfb7116775c64af404",
+       "model_id": "0ca05ac4478f4583902f5069df08d0c9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:43125/index.html?ui=P_0x7dfeb0a32d90_1&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:42493/index.html?ui=P_0x76cdc1c82a90_1&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
