--- a/common_filters.ipynb
+++ b/common_filters.ipynb
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UnstructuredGrid (0x75275657b880)\n",
+      "UnstructuredGrid (0x76a3d1fb3880)\n",
       "  N Cells:    3140920\n",
       "  N Points:   3172091\n",
       "  X Bounds:   -1.000e+00, 1.000e+00\n",
@@ -85,7 +85,7 @@
    ],
    "source": [
     "# Q criterion\n",
-    "\n",
+    "# Can use qcriterion=True or qcriterion='key', which results in a data set of that name\n",
     "Q = data.compute_derivative('Velocity',qcriterion='Q', gradient=False)\n",
     "print(Q.cell_data)"
    ]
@@ -96,6 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Contour like the contour filter in paraview with Q as the selected scalar\n",
     "Q_contour = Q.ctp().contour([0.5],\n",
     "                      scalars='Q')"
    ]
@@ -108,12 +109,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93cde634b4944ab0bf19f5b469181fab",
+       "model_id": "1f995d2ba94547b1b3507dce35f50855",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:42373/index.html?ui=P_0x7527566906d0_0&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:40771/index.html?ui=P_0x76a3d1fdf610_0&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -121,6 +122,7 @@
     }
    ],
    "source": [
+    "# Plot isosurface of Q\n",
     "p = pv.Plotter(window_size=(500,500))\n",
     "\n",
     "p.add_mesh(Q_contour,\n",
@@ -128,7 +130,10 @@
     "           cmap='bwr')\n",
     "\n",
     "p.add_axes()\n",
+    "\n",
+    "# set camera\n",
     "p.view_xy(negative=True)\n",
+    "# change azimuth and elevation of the camera\n",
     "p.camera.azimuth = 30\n",
     "p.camera.elevation = 30\n",
     "p.show()"
@@ -165,9 +170,10 @@
     }
    ],
    "source": [
-    "# lambda2\n",
+    "# We now compute lambda_2 from the gradient calculation\n",
     "\n",
     "dudx_data = data.compute_derivative('Velocity',gradient='dudx')\n",
+    "# dudx is of size (n_cell, 9) as we should expect\n",
     "print(dudx_data.cell_data)"
    ]
   },
@@ -177,9 +183,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reshape data so last dimensions are a 3X3 matrix\n",
     "dudx = dudx_data.cell_data['dudx'].reshape((dudx_data.n_cells ,3,3))\n",
     "\n",
+    "# transpose last two dimentions of dudx\n",
     "dudxT = np.transpose(dudx,axes=(0,2,1))\n",
+    "\n",
+    "# compute strain rate tensor and rotation rate tensor\n",
     "S = 0.5*(dudx + dudxT)\n",
     "Omega = 0.5*(dudx - dudxT)"
    ]
@@ -190,12 +200,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Compute $S_{ik}S_{kj} + \\Omega_{ik}S_{kj}$\n",
     "S2O2 = np.matmul(S,S) + np.matmul(Omega,Omega)\n",
     "\n",
+    "# Compute eigenvalues of symmetric matrix leaving unused eigenvectors blank\n",
     "eig, _ = np.linalg.eigh(S2O2)\n",
     "\n",
+    "# Get second largest value\n",
     "lambda2 = eig[:,1]\n",
     "\n",
+    "# Reassign lambda_2 to cell_data\n",
     "dudx_data.cell_data['lambda_2'] = lambda2"
    ]
   },
@@ -207,12 +221,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0183bcd82b324da8960d5c9ba81cd955",
+       "model_id": "c12db417793a47099db6825ffac57e62",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:42373/index.html?ui=P_0x752743c0c550_1&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:40771/index.html?ui=P_0x76a3a6f3bf90_1&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -220,7 +234,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Plot contour the same manner as Q\n",
     "lambda2_contour = dudx_data.ctp().contour([-0.4],\n",
     "                                    scalars='lambda_2')\n",
     "\n",
