--- a/nice_figures.ipynb
+++ b/nice_figures.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "6e829326-5852-4f66-be49-b9009324ac83",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "    P_mean                  float32    (3140920,)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,16 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "afbf31f3-dcfe-4c82-9ef4-1d5dae470f87",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create off_screen slic plots and output them as an (N, M, 4) \n",
+    "# Create off_screen slice plots and output them as an (N, M, 4) \n",
     "# RGBA array\n",
     "\n",
+    "# Slice data\n",
     "plane = data.ctp().slice(normal='x',origin=(0,0,0))\n",
     "\n",
+    "# Plot slice of instantaneous velocity off screen (no window pops out)\n",
     "p1 = pv.Plotter(window_size=(1000,200), off_screen=True)\n",
     "p1.add_mesh(plane,\n",
     "            scalars='Velocity',\n",
@@ -78,8 +80,12 @@
     "           show_scalar_bar=False)\n",
     "p1.view_zy()\n",
     "p1.camera.zoom(4.5)\n",
+    "p1.render()\n",
+    "\n",
+    "# screenshot without filename results in an array of the image being returned\n",
     "im1 = p1.screenshot(transparent_background=True)\n",
     "\n",
+    "# Do the same thing with mean velocity\n",
     "p2 = pv.Plotter(window_size=(1000,200), off_screen=True)\n",
     "\n",
     "p2.add_mesh(plane,\n",
@@ -90,12 +96,13 @@
     "\n",
     "p2.view_zy()\n",
     "p2.camera.zoom(4.5)\n",
+    "p2.render()\n",
     "im2 = p2.screenshot(transparent_background=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "c25f70fb-441a-40bb-b714-8e1e50ab2f20",
    "metadata": {},
    "outputs": [
@@ -129,6 +136,7 @@
     "ax[1].text(0.05,0.8,r\"$(b)$\", transform=ax[1].transAxes)\n",
     "\n",
     "# Creating colorbar with manually created ScalarMappable\n",
+    "# normalise matches the clim from the add_mesh method above\n",
     "norm = Normalize(0,1.5)\n",
     "qm = ScalarMappable(norm=norm,cmap='bwr')\n",
     "\n",
