--- a/reading_cs.ipynb
+++ b/reading_cs.ipynb
@@ -31,8 +31,12 @@
    "source": [
     "import pyvista as pv\n",
     "\n",
+    "# .case file name\n",
     "fn = 'case/postprocessing/RESULTS_FLUID_DOMAIN.case'\n",
     "\n",
+    "# Two ways of reading .case file\n",
+    "# Under the hood get_reader detects the file extension and \n",
+    "# chooses the correct reader\n",
     "reader1 = pv.get_reader(fn)\n",
     "reader2 = pv.EnSightReader(fn)\n",
     "\n",
@@ -68,6 +72,7 @@
     }
    ],
    "source": [
+    "# Output available times\n",
     "reader1.time_values\n"
    ]
   },
@@ -80,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MultiBlock (0x76cdfa9ffac0)\n",
+      "MultiBlock (0x70b6f6bb96c0)\n",
       "  N Blocks    1\n",
       "  X Bounds    -1.000, 1.000\n",
       "  Y Bounds    -1.000, 1.000\n",
@@ -90,9 +95,11 @@
     }
    ],
    "source": [
+    "# Set active time and read dataset\n",
     "reader1.set_active_time_value(300)\n",
     "data_blocks = reader1.read()\n",
     "\n",
+    "# results in multi-block dataset with one block: 'Fluid domain'\n",
     "print(data_blocks)\n",
     "print(data_blocks.keys())"
    ]
@@ -106,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UnstructuredGrid (0x76cdfa9ffc40)\n",
+      "UnstructuredGrid (0x70b6f6bb9c60)\n",
       "  N Cells:    3140920\n",
       "  N Points:   3172091\n",
       "  X Bounds:   -1.000e+00, 1.000e+00\n",
@@ -117,6 +124,7 @@
     }
    ],
    "source": [
+    "# Access the unstructured dataset by indexing like a dict\n",
     "data = data_blocks['Fluid domain']\n",
     "print(data)"
    ]
@@ -154,6 +162,7 @@
     }
    ],
    "source": [
+    "# View cell data (think like paraview)\n",
     "data.cell_data"
    ]
   },
@@ -190,7 +199,10 @@
     }
    ],
    "source": [
+    "# Common filter in paraview\n",
     "data = data.cell_data_to_point_data() # data.ctp()\n",
+    "\n",
+    "# Show point data\n",
     "data.point_data"
    ]
   },
@@ -202,12 +214,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07df07cd48e84c668f1ee8ba557a0b90",
+       "model_id": "1e385249ffa9431eaa7474c57905855a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:42493/index.html?ui=P_0x76cdfac42a10_0&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:45319/index.html?ui=P_0x70b6f6d14950_0&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -215,12 +227,16 @@
     }
    ],
    "source": [
+    "# Creater plotter\n",
     "p = pv.Plotter(window_size=(500,500))\n",
     "\n",
+    "# Add dataset to plotter displaying velocity with the bwr colormap\n",
+    "# To access components of a vector use keyword argument `component=0` etc.\n",
     "p.add_mesh(data,\n",
     "           scalars='Velocity',\n",
     "           cmap='bwr')\n",
     "\n",
+    "# Set view and add axes\n",
     "p.view_xy()\n",
     "p.add_axes()\n",
     "p.show()"
@@ -240,12 +256,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ca05ac4478f4583902f5069df08d0c9",
+       "model_id": "2e1db091968546f6aff187d631075889",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:42493/index.html?ui=P_0x76cdc1c82a90_1&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:45319/index.html?ui=P_0x70b6e0186cd0_1&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -253,7 +269,9 @@
     }
    ],
    "source": [
+    "# Same as before but create slice (like the slice filter in paraview)\n",
     "p = pv.Plotter(window_size=(500,500))\n",
+    "\n",
     "plane_slice = data.slice(origin=(0,0,0),\n",
     "                         normal='x')\n",
     "\n",
@@ -264,13 +282,6 @@
     "p.add_axes()\n",
     "p.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
