--- a/spatial_averaging.ipynb
+++ b/spatial_averaging.ipynb
@@ -14,6 +14,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read data same manner as reading_cs\n",
+    "\n",
     "import pyvista as pv\n",
     "import numpy as np\n",
     "fn = 'case/postprocessing/RESULTS_FLUID_DOMAIN.case'\n",
@@ -53,18 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36aae24f4ded4557bc489c0b23d6bed6",
+       "model_id": "0ecc31feba0744a787b441e1e409100e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:40345/index.html?ui=P_0x7b9ebe140e50_0&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:33849/index.html?ui=P_0x733e6c385190_2&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -72,6 +74,7 @@
     }
    ],
    "source": [
+    "# Plot point cloud (zoom to see the points)\n",
     "p = pv.Plotter(window_size=(500,500))\n",
     "\n",
     "p.add_mesh(plane.points)\n",
@@ -146,12 +149,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ae0a395463c41c9a0cc6dc45426e20a",
+       "model_id": "381cc4f4fbf549028945a7d7a9a36cbb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:40345/index.html?ui=P_0x7b9ebc483e90_1&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:33849/index.html?ui=P_0x733e6c312390_1&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -159,6 +162,7 @@
     }
    ],
    "source": [
+    "# Plot both original data and circumferentially averaged data\n",
     "p = pv.Plotter()\n",
     "p.add_mesh(s,\n",
     "           scalars='U_mean',\n",
