--- a/statistics_cs.ipynb
+++ b/statistics_cs.ipynb
@@ -45,6 +45,7 @@
     }
    ],
    "source": [
+    "# Load data in the same manner as reading_cs\n",
     "import pyvista as pv\n",
     "\n",
     "fn = 'case/postprocessing/RESULTS_FLUID_DOMAIN.case'\n",
@@ -63,6 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get mean velocity data\n",
     "Vel_mean = data.cell_data['U_mean']\n",
     "\n",
     "# x component\n",
@@ -79,8 +81,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set symmetric tensor with $\\langle u u \\rangle$\n",
     "Vel2_tensor = data.cell_data['UU_mean']\n",
     "\n",
+    "#Layout of symmetric tensor below\n",
     "# xx component\n",
     "UU_mean = Vel2_tensor[:,0]\n",
     "# yy component\n",
@@ -90,7 +94,7 @@
     "# xy component\n",
     "UV_mean = Vel2_tensor[:,3]\n",
     "# xz component\n",
-    "#UW_mean = Vel2_tensor[:,4]\n",
+    "UW_mean = Vel2_tensor[:,4]\n",
     "# yz component\n",
     "VW_mean = Vel2_tensor[:,5]\n"
    ]
@@ -139,7 +143,7 @@
     "# Compute k\n",
     "k= 0.5*(uu + vv + ww)\n",
     "\n",
-    "# Reassign l to cell_data\n",
+    "# Reassign k to cell_data\n",
     "data.cell_data['k'] = k\n",
     "\n",
     "data.cell_data\n"
@@ -153,12 +157,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fffd9e618da84413b57696a6b078fc3a",
+       "model_id": "65bbcf73cccb4000a402398fe1132bc5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:40017/index.html?ui=P_0x7fdd14053210_0&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:43159/index.html?ui=P_0x7b7d9c014e90_0&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -166,6 +170,7 @@
     }
    ],
    "source": [
+    "# Plot k the same as reading_cs example\n",
     "p = pv.Plotter(window_size=(500,500))\n",
     "plane_slice = data.slice(origin=(0,0,0),\n",
     "                         normal='x')\n",
